FIX: Adjust paginator visibility logic and streamline cancel button markup
Hiding paginator with ngIf detaches the dom element crashing the ViewChild injector. Best option is to hide it using CSS.

--- a/webgui/webapp/src/app/components/entry-id-selection-dialog/entry-id-selection-dialog.component.scss
+++ b/webgui/webapp/src/app/components/entry-id-selection-dialog/entry-id-selection-dialog.component.scss
@@ -18,3 +18,7 @@
 .bui-ngx-json-viewer {
   text-wrap: nowrap;
 }
+
+.hide {
+  @apply h-0 invisible my-0 py-0;
+}
